feat: documentation login and register
